--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -141,12 +141,81 @@ TODO :
             <t t-call="is_plastigray.pg_external_layout_footer"/>
         </template>
 
+
+
+
+
+
+
+
+
+
+
         <!-- Bon de livraison -->
+
         <template id="stock.report_picking">
             <t t-call="is_plastigray.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-call="is_plastigray.pg_external_layout">
                         <div class="page">
+
+                            <t t-foreach="o.pack_operation_ids" t-as="line">
+                                <span t-field="line.product_id"/>
+                            </t>
+
+                            <t t-foreach="o.move_lines" t-as="line">
+                                <span t-field="line.product_id"/>
+                            </t>
+
+
+
+                            <div>not pack_operation_ids</div>
+                            <table class="table table-condensed" t-if="not o.pack_operation_ids">
+                              <thead>
+                                <tr>
+                                    <th><strong>Product</strong></th>
+                                    <th class="text-right"><strong>Quantity</strong></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr t-foreach="o.move_lines" t-as="move">
+                                    <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
+                                        <td><span t-field="move.product_id"/></td>
+                                        <td class="text-right">
+                                            <t t-if="o.state == 'partially_available'">
+                                                <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/>
+                                            </t>
+                                            <t t-if="o.state != 'partially_available'">
+                                                <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/>
+                                            </t>
+                                        </td>
+                                    </t>
+                                </tr>
+                              </tbody>
+                            </table>
+
+
+                            <div>pack_operation_ids</div>
+                            <table class="table table-condensed" t-if="o.pack_operation_ids">
+                              <thead>
+                                <tr>
+                                    <th><strong>Product</strong></th>
+                                    <th class="text-right"><strong>Quantity</strong></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr t-foreach="o.pack_operation_ids" t-as="pack_operation">
+                                    <td><span t-field="pack_operation.product_id"/>
+                                        <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td>
+                                    <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td>
+                                </tr>
+                              </tbody>
+                            </table>
+
+
+                            <div>not pack_operation_ids</div>
+
+
                             <table class="table table-condensed" t-if="not o.pack_operation_ids">
                               <thead>
                                 <tr>
@@ -223,10 +292,14 @@ TODO :
                               </tbody>
                             </table>
                             Poids total : <span t-esc="pds_total"/> KG
+
+
+
                         </div>
                     </t>
                  </t>
              </t>
         </template>
+
     </data>
 </openerp>
