--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -10,6 +10,17 @@
     max-width: 95%;
 }
 
+.oe_list_field_float{
+    white-space: nowrap !important;
+}
+
+/*
+.oe_number{
+    color: red;
+    white-space: nowrap !important;
+}
+*/
+
 /*
 .graph_border {
     text-align: left;
