--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -75,10 +75,9 @@ TODO :
                             Siège social : ZAC de Gray Sud <br />
                             CS 10133 - <b>70104 GRAY Cedex</b><br />
                             Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
-                            Siret B 377 846 381 00046 - Code NAF 2229 A <br />
+                            Siret B 377 846 381 00020 - Code NAF 2229 A <br />
                             Registre du Commerce GRAY <br />
                             N°Identification T.V.A. FR 65 377 846 381 <br />
-
                             <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
                             <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
                             <span t-field="o.partner_id.is_num_fournisseur"/>
@@ -159,12 +158,17 @@ TODO :
                     <t t-call="is_plastigray.pg_external_layout">
                         <div class="page">
 
-                            <t t-foreach="o.pack_operation_ids" t-as="line">
-                                <span t-field="line.product_id"/>
-                            </t>
 
+                            <!--
+                            <div>o.pack_operation_ids</div>
+                            <t t-foreach="o.pack_operation_ids" t-as="line">
+                                <span t-field="line.is_sale_line_id.is_client_order_ref"/> : 
+                                <span t-field="line.product_id"/><br />
+                            </t>
+                            <div>o.move_lines</div>
                             <t t-foreach="o.move_lines" t-as="line">
-                                <span t-field="line.product_id"/>
+                                <span t-field="line.is_sale_line_id.is_client_order_ref"/> : 
+                                <span t-field="line.product_id"/><br />
                             </t>
 
 
@@ -195,6 +199,7 @@ TODO :
                             </table>
 
 
+
                             <div>pack_operation_ids</div>
                             <table class="table table-condensed" t-if="o.pack_operation_ids">
                               <thead>
@@ -214,9 +219,10 @@ TODO :
 
 
                             <div>not pack_operation_ids</div>
+                            -->
 
 
-                            <table class="table table-condensed" t-if="not o.pack_operation_ids">
+                            <table class="table table-condensed">
                               <thead>
                                 <tr>
                                     <th t-if="o.partner_id.lang == 'fr_FR'">Commande N°</th> <th t-if="o.partner_id.lang != 'fr_FR'">Order N°</th>
@@ -233,7 +239,6 @@ TODO :
                                 <t t-set="pds_total" t-value="0"/>
                                 <tr t-foreach="o.move_lines" t-as="move">
                                     <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
-
                                         <t t-set="qt1" t-value="move.product_uom_qty"/>
                                         <t t-set="nb2"    t-value="0"/>
                                         <t t-set="unite2" t-value="x"/>
