--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -21,6 +21,7 @@ TODO :
             .expediteur {
                 font-size:8pt;
                 text-align:center;
+                color:red;
             }
             .destinataire {
                 text-align:left;
