--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -13,11 +13,18 @@ TODO :
     <data>
 
         <template id="style">
-            .titre {
-                font-size:12pt;
-                font-weight: bold;
+            .page {
+                font-size:8pt;
             }
-
+            .header {
+                font-size:8pt;
+                color:red;
+            }
+            .titre {
+                font-size:10pt;
+                font-weight: bold;
+                color:green;
+            }
             .expediteur {
                 font-size:4pt;
                 text-align:center;
