--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -13,9 +13,6 @@ TODO :
     <data>
 
         <template id="style">
-            .page {
-                font-size:10pt;
-            }
             .header {
                 font-size:10pt;
             }
@@ -23,14 +20,14 @@ TODO :
                 font-size:7pt;
             }
             .page {
-                font-size:7pt;
+                font-size:9pt;
             }
             .titre {
                 font-size:11pt;
                 font-weight: bold;
             }
             .expediteur {
-                font-size:8pt;
+                font-size:9pt;
                 text-align:center;
             }
             .destinataire {
@@ -133,12 +130,15 @@ TODO :
                 <div class="text-center" style="border-top: 1px solid black">
                     <table>
                         <tr>
-                            <td class="text-left" style="width:90%">
-                                <b>CONDITIONS D'EXPEDITION : </b> Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. <br />
-                                <b>CLAUSE D'ATTRIBUTION DE COMPETENCE : </b> Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. Me donner le texte, car c'est long. <br />
+                            <td class="text-left" style="width:90%;text-align: justify;text-justify: inter-word;">
+                                <b>CONDITIONS D'EXPEDITION : </b> 
+                                Les marchandises, même expédiées franco, voyagent aux risques et périls du transporteur. Il appartient en cas d'avarie ou de manquant de faire des protestations motivées au dit transporteur par acte judiciaire ou par lettre recommandée avec accusé de réception dans les 3 jours qui suivent la réception de la marchandise, non compris les jours fériés.
+                                Sans préjudice, des dispositions à prendre vis à vis du transporteur, les réclamations sur le vice apparent ou sur la non conformité des produits livrés doivent être formulées par écrit dans les 8 jours sous peine d'irrecevabilité.<br />
+                                <b>CLAUSE D'ATTRIBUTION DE COMPETENCE : </b>
+                                Sauf convention expresse et conformément à nos conditions générales de vente, seul le tribunal de Vesoul-Gray sera compétent pour connaître de tous les délits pouvant survenir à l'occasion de cette livraison.<br />
                             </td>
                             <td class="text-right">
-                                Page <span class="page"/> / <span class="topage"/>
+                                Page <span class="page" style="font-size:7pt;"/> / <span class="topage"/>
                             </td>
 
                         </tr>
