--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -79,15 +79,23 @@
                             N°Identification T.V.A. FR 65 377 846 381 <br />
                             <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
                             <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
-                            <span t-field="o.partner_id.is_num_fournisseur"/>
+                            <span t-field="o.partner_id.is_cofor"/>
                         </div>
                     </div>
                     <div class="col-xs-1" />
 
                     <div class="col-xs-7">
                         <div class="titre">
-                            <span t-if="o.partner_id.lang == 'fr_FR'">FACTURE N°</span>
-                            <span t-if="o.partner_id.lang != 'fr_FR'">INVOICE N°</span>
+
+                            <t t-if="o.type == 'out_invoice'">
+                                <span t-if="o.partner_id.lang == 'fr_FR'">FACTURE N°</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">INVOICE N°</span>
+                            </t>
+                            <t t-if="o.type == 'out_refund'">
+                                <span t-if="o.partner_id.lang == 'fr_FR'">AVOIR N°</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">AVOIR N°</span>
+                            </t>
+
                             <span t-field="o.number"/>
                              du <span t-field="o.date_invoice"  t-field-options='{"format": "dd/MM/yyyy"}' /><br />
                         </div>
@@ -104,17 +112,27 @@
                             <t t-set="picking" t-value="l.is_move_id.picking_id"/>
                         </div>
                         <div t-if="picking">
-                            Livraison N° <span t-field="picking.name" /> du <span t-field="picking.date" t-field-options='{"format": "dd/MM/yyyy"}' />
+                            Livraison N° <span t-field="picking.name" /> du <span t-field="picking.date" t-field-options='{"format": "dd/MM/yyyy"}' /><br />
+                            <i>
+                                Adresse de livraison : 
+                                <span t-field="picking.partner_id.name" />
+                                <span t-field="picking.partner_id.street" />
+                                <span t-field="picking.partner_id.street2" /><br />
+                                <span t-field="picking.partner_id.zip" />
+                                <span t-field="picking.partner_id.city" /> - 
+                                <span t-field="picking.partner_id.country_id.name" />
+                            </i>
                         </div>
 
                              <!--<span t-field="l.is_move_id.is_sale_line_id.name" />-->
 
 
-
-                        <div t-if="o.partner_id.lang == 'fr_FR'">Nom du client et adresse de facturation : </div>
-                        <div t-if="o.partner_id.lang != 'fr_FR'">Name of client and invoicing adress : </div>
+                        <b>
+                            <div t-if="o.partner_id.lang == 'fr_FR'">Nom du client et adresse de facturation : </div>
+                            <div t-if="o.partner_id.lang != 'fr_FR'">Name of client and invoicing adress : </div>
+                        </b>
                         <div class="destinataire">
-                            <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
+                            <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>/<span t-field="o.partner_id.is_adr_code"/>)
                             <div t-field="o.partner_id"
                                  t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
                         </div>
@@ -189,6 +207,7 @@
     <t t-call="is_plastigray.is_report_invoice_external_layout">
         <div class="page">
             <div t-if="o.is_document"><b>Document            : </b><span t-field="o.is_document"/></div>
+            <div t-if="o.is_document"><b>Document            : </b><span t-field="o.is_document"/></div>
             <div t-if="o.is_num_cde_client"><b>N° Cde Client : </b><span t-field="o.is_num_cde_client"/></div>
             <div t-if="o.is_num_bl_manuel"><b>N° BL manuel   : </b><span t-field="o.is_num_bl_manuel"/></div>
             <p />
@@ -209,7 +228,7 @@
                         <td><span t-field="l.is_move_id.is_sale_line_id.is_client_order_ref"/></td>
                         <td><span t-field="l.name"/></td>
                         <td><span t-field="l.product_id.is_ref_client"/></td>
-                        <td class="text-right"><span t-field="l.price_unit"/></td>
+                        <td class="text-right"><span style="white-space: nowrap;" t-field="l.price_unit"/></td>
                         <td class="text-right"><span t-esc="int(l.quantity)"/></td>
                         <td class="text-right">
                             <span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
@@ -250,16 +269,27 @@
                 <strong>Comment:</strong>
                 <span t-field="o.comment"/>
             </p>
+
             <p t-if="o.payment_term.note">
                 <strong>Conditions de règlement : </strong>
-                <span t-field="o.payment_term.note"/>
+                <span t-field="o.payment_term.note"/><br />
+                <span>
+                    <i>
+                    Pénalités en cas de retard de paiement : 
+                    3 fois le taux d'intéret légal + 40€ de forfait de recouvrement. 
+                    Escompte pour réglement anticipé : 0.5% par mois.
+                    </i>
+                </span>
             </p>
             <p t-if="o.fiscal_position.note">
                 <strong>Fiscal Position Remark:</strong>
                 <span t-field="o.fiscal_position.note"/>
             </p>
 
-
+            <p t-if="o.partner_id.is_type_reglement">
+                <strong>Type de règlement : </strong>
+                <span t-field="o.partner_id.is_type_reglement.name"/>
+            </p>
             <table class="table table-condensed" style="width:50%" t-if="o.partner_id.is_rib_id">
                 <thead>
                     <tr>
