--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -249,6 +249,7 @@
             </table>
 
             <!-- Affichage de l'escompte -->
+            <!--
             <t t-set="escompte" t-value="0"/>
             <t t-set="tva"      t-value="0"/>
             <t t-foreach="o.tax_line" t-as="tax">
@@ -259,6 +260,7 @@
                     <t t-set="tva" t-value="tva + tax.amount"/>
                 </t>
             </t>
+            -->
             <div class="row">
                 <div class="col-xs-4 pull-right">
                     <table class="table table-condensed">
@@ -268,16 +270,18 @@
                                 <span t-field="o.amount_untaxed" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
-                        <tr t-if="escompte" >
+                        <tr t-if="o.is_escompte" >
                             <td>Escompte</td>
                             <td class="text-right">
-                                <span t-esc='"{:,.2f}".format(abs(escompte)).replace(","," ").replace(".",",")'/> €
+                                <!--<span t-esc='"{:,.2f}".format(abs(escompte)).replace(","," ").replace(".",",")'/> €-->
+                                <span t-field="o.is_escompte" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                         <tr>
                             <td>T.V.A.</td>
                             <td class="text-right">
-                                <span t-esc='"{:,.2f}".format(abs(tva)).replace(","," ").replace(".",",")'/> €
+                                <!--<span t-esc='"{:,.2f}".format(abs(tva)).replace(","," ").replace(".",",")'/> €-->
+                                <span t-field="o.is_tva" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                         <tr class="border-black">
