--- a/views/report.xml
+++ b/views/report.xml
@@ -50,6 +50,20 @@
 
 
 
+        <report 
+            id="report_bon_de_sortie_matieres"
+            model="mrp.production"
+            string="Bon de sortie matière"
+            report_type="qweb-pdf"
+            name="is_plastigray.report_bon_de_sortie_matiere"
+            file="is_plastigray.report_bon_de_sortie_matiere"
+        />
+        <record id="report_bon_de_sortie_matieres" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.document_fabrication_landscape_paperformat"/>
+        </record>
+
+
+
 
 
     </data>
